<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ID Capture</string>
    <string name="capture_card_title">Chụp ảnh CMND/Căn cước</string>
    <string name="capture_front_of_card_title">Chụp ảnh mặt trước \nCMND/CCCD trong khung</string>
    <string name="capture_back_of_card_title">Chụp ảnh mặt sau \nCMND/CCCD trong khung</string>
    <string name="id_card_capture_note">Lưu ý: \n
- Giấy tờ còn hạn sử dụng, không sử dụng bản scan, photocopy \n
- Ảnh chụp CMND/CCCD đảm bảo chính chủ, không giả mạo</string>
    <string name="card_not_fit">Vui lòng điều chỉnh CMND/CCCD vào giữa khung hình</string>
    <string name="no_card">Không thấy mặt trước của CMND/CCCD</string>
    <string name="no_card_back">Không thấy mặt sau của CMND/CCCD</string>
    <string name="card_no_face">Vui lòng sử dụng mặt trước của CMND/CCCD để chụp</string>
    <string name="card_back_has_face">Vui lòng chuyển CMND/CCCD sang mặt sau</string>
    <string name="card_ok">Hãy giữ yên</string>
    <string name="card_too_far">Vui lòng di chuyển Camera gần hơn</string>
    <string name="card_too_near">Vui lòng di chuyển Camera xa hơn</string>
    <string name="capture_note">Lưu ý: \n - Giấy tờ còn hạn sử dụng, không sử dụng bản scan, photocopy \n - Ảnh chụp cần rõ nét, đầy đủ thông tin, không bị mất góc, không bị chói sáng \n - Ảnh chụp CMND/CCCD đảm bảo chính chủ, không giả mạo</string>
    <string name="capture_back">Chụp mặt sau</string>
    <string name="confirm_info">Xác thực thông tin</string>
</resources>
