<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/actionBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/actionClose"
                    android:layout_width="@dimen/close_size"
                    android:layout_height="@dimen/close_size"
                    android:layout_gravity="start"
                    android:padding="@dimen/top_action_button_padding"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_close_vd_white_24" />

                <TextView
                    android:id="@+id/titleCapture"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:fontFamily="@font/sf_medium"
                    android:gravity="center"
                    android:maxLines="1"
                    android:paddingEnd="@dimen/top_action_button_padding"
                    android:src="@drawable/ic_close_vd_white_24"
                    android:text="@string/capture_card_title"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/captureGuide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/sf_bold"
                android:gravity="center"
                android:paddingEnd="@dimen/top_action_button_padding"
                android:src="@drawable/ic_close_vd_white_24"
                android:text="@string/capture_front_of_card_title"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_gravity="center_horizontal"/>


            <FrameLayout
                android:id="@+id/surfaceContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="32dp"
                android:padding="16dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="8dp">

                    <com.otaliastudios.cameraview.CameraView
                        android:id="@+id/cameraView"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_gravity="center_horizontal"
                        android:keepScreenOn="true"
                        app:cameraAudio="off"
                        app:cameraExperimental="true"
                        app:cameraFacing="back"
                        app:cameraFlash="auto"
                        app:cameraGestureLongTap="none"
                        app:cameraGesturePinch="zoom"
                        app:cameraGestureScrollHorizontal="filterControl1"
                        app:cameraGestureScrollVertical="exposureCorrection"
                        app:cameraGestureTap="autoFocus"
                        app:cameraGrid="off"
                        app:cameraMode="picture"
                        app:cameraPictureSizeBiggest="true"
                        app:cameraPlaySounds="false"
                        app:layout_constraintDimensionRatio="1.586:1"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/msgStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="25dp"
                    android:background="@drawable/bg_msg_capture"
                    android:fontFamily="@font/sf_medium"
                    android:gravity="center"
                    android:padding="5dp"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:visibility="gone" />

                <View
                    android:id="@+id/view_1"
                    android:layout_width="30dp"
                    android:layout_height="3dp"
                    android:layout_gravity="top|left"
                    android:background="@color/vertex_frame_color" />

                <View
                    android:layout_width="30dp"
                    android:layout_height="3dp"
                    android:layout_gravity="right|bottom"
                    android:background="@color/vertex_frame_color" />

                <!-- Top vertical lines -->
                <View
                    android:layout_width="3dp"
                    android:layout_height="30dp"
                    android:layout_gravity="top|left"
                    android:background="@color/vertex_frame_color" />

                <View
                    android:layout_width="30dp"
                    android:layout_height="3dp"
                    android:layout_gravity="right|top"
                    android:background="@color/vertex_frame_color" />

                <View
                    android:layout_width="3dp"
                    android:layout_height="30dp"
                    android:layout_gravity="top|right"
                    android:background="@color/vertex_frame_color" />

                <!-- Bottom horizzontal lines -->
                <View
                    android:layout_width="30dp"
                    android:layout_height="3dp"
                    android:layout_gravity="left|bottom"
                    android:background="@color/vertex_frame_color" />

                <View
                    android:layout_width="30dp"
                    android:layout_height="3dp"
                    android:layout_gravity="right|bottom"
                    android:background="@color/vertex_frame_color" />

                <!-- Bottom vertical lines -->
                <View
                    android:layout_width="3dp"
                    android:layout_height="30dp"
                    android:layout_gravity="left|bottom"
                    android:background="@color/vertex_frame_color" />

                <View
                    android:layout_width="3dp"
                    android:layout_height="30dp"
                    android:layout_gravity="right|bottom"
                    android:background="@color/vertex_frame_color" />
            </FrameLayout>

            <TextView
                android:id="@+id/captureNote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="24dp"
                android:paddingEnd="@dimen/top_action_button_padding"
                android:src="@drawable/ic_close_vd_white_24"
                android:text="@string/capture_note"
                android:textColor="@color/white"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>
    </ScrollView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/actionCapture"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginBottom="32dp"
            android:scaleType="fitXY"
            android:src="@drawable/icon_iphone_2" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/captureResultContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="16dp"
            android:background="@android:color/transparent">

            <androidx.cardview.widget.CardView
                android:visibility="gone"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginBottom="16dp"
                android:elevation="10dp"
                app:cardCornerRadius="8dp"
                app:layout_constraintBottom_toTopOf="@+id/actionCancel"
                app:layout_constraintLeft_toLeftOf="parent">
                <ImageView
                    android:id="@+id/ivResult"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_above="@+id/actionCancel"
                    android:layout_gravity="bottom"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/actionCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:background="@drawable/background_boader_primary_color"
                android:fontFamily="@font/sf_medium"
                android:gravity="center"
                android:paddingVertical="5dp"
                android:text="Chụp lại"
                android:textColor="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/actionConfirm" />

            <TextView
                android:id="@+id/actionConfirm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:background="@drawable/bg_green_active_round_no_stroke_radius_3dp"
                android:ellipsize="end"
                android:fontFamily="@font/sf_medium"
                android:gravity="center"
                android:maxLines="2"
                android:paddingVertical="5dp"
                android:text="@string/confirm_info"
                android:textColor="@color/color_white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/actionCancel"
                app:layout_constraintRight_toRightOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>

</LinearLayout>
